--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -20,5 +20,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+add_subdirectory(static)
 add_subdirectory(shared)
 add_subdirectory(module)
