Add myproj_add_test_lib() and finish out unit testing

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -25,7 +25,7 @@ myproj_add_exe(
   mycxxapp
   COMPONENT
   mycxxapp
-  SRC
+  SRCS
   main.cpp
   LIBS
   myslib
@@ -40,7 +40,7 @@ myproj_add_exe(
   mycapp
   COMPONENT
   mycapp
-  SRC
+  SRCS
   main.c
   LIBS
   myarch
